Add new feature: set how many pokemon you want to see

--- a/style.css
+++ b/style.css
@@ -34,6 +34,35 @@ h1 img {
   margin-right: 2rem;
 }
 
+.select-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3.2rem;
+}
+
+.select-container select {
+  background: #f1f1f1;
+  width: 100%;
+  max-width: 10rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #17212c;
+  outline: none;
+  cursor: pointer;
+}
+
+.select-container select option {
+  background: #f1f1f1;
+  padding: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #17212c;
+}
+
 .controls,
 .controls .numbers,
 .controls div:not(.numbers) {
